--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>BMI Calculator</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
+    <!-- social links for refinedguides.com -->
+    <script
+      src="https://refinedguides.com/assets/social.js?linkColor=%2300a1a3&textColor=%23fff"
+      defer
+    ></script>
   </head>
   <body>
     <div class="container">
@@ -14,12 +19,28 @@
       <form class="calculator">
         <div>
           <label for="weight">Weight (kg)</label>
-          <input type="number" id="weight" min="0" step="0.01" value="0" />
+          <input
+            type="number"
+            id="weight"
+            min="0"
+            step="any"
+            value="0"
+            inputmode="decimal"
+            onfocus="if (this.value === '0') this.value = ''"
+          />
         </div>
 
         <div>
           <label for="height">Height (cm)</label>
-          <input type="number" id="height" min="0" step="0.01" value="0" />
+          <input
+            type="number"
+            id="height"
+            min="0"
+            step="any"
+            value="0"
+            inputmode="decimal"
+            onfocus="if (this.value === '0') this.value = ''"
+          />
         </div>
 
         <div>
